# ADAOpera

./: README.md  index.html  notebook_server.py  package-lock.json  package.json  vite.config.ts
public/: landing.html
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dsp.rs  lib.rs  main.rs
src/components/dj/: DJCrate.tsx  DJMixer.tsx
src/components/instruments/: PianoKeyboard.tsx
src/components/layout/: Sidebar.tsx  TransportBar.tsx
src/components/media/: GrabPanel.tsx  NotebookPanel.tsx  PixPanel.tsx  VideoPanel.tsx
src/components/mixer/: MixerChannel.tsx
src/components/partition/: ScoreViewer.tsx
src/components/turntable/: Turntable.tsx
src/components/visualizers/: BalletVisualizer.tsx  FFTAnalyzer.tsx  PhaseScope.tsx  Spectrogram.tsx  VUMeter.tsx  Waveform.tsx
src/engines/: ada-sound-bridge.ts  audio-engine.ts  deepskill-handler.ts  grab-engine.ts  mix-engine.ts  notebook-engine.ts  orchestra-registry.ts  partition-parser.ts  pix-engine.ts  playback-bus.ts  rituala-engine.ts  scribe-engine.ts  tauri-bridge.ts  video-engine.ts
src/lib/: feature-tree.ts  i18n.ts
src/stores/: media-store.ts  opera-store.ts
tests/: ab_report.json  test_ab_features.py  test_signal_integration.py
