[package]
name = "ada-opera"
version = "1.0.0"
description = "ADA Opera — La Voix de la Reine | Native DSP Backend"
authors = ["Shadows Company"]
edition = "2021"

[lib]
name = "ada_opera_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dasp = "0.11"                    # Digital Audio Signal Processing
dasp_signal = "0.11"
dasp_sample = "0.11"
rubato = "0.15"                  # Sample rate conversion
hound = "3.5"                    # WAV read/write
symphonia = { version = "0.5", features = ["all"] }  # Audio codec decoding
realfft = "3"                    # FFT for native spectral analysis
num-complex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
